exports[`test renders correctly as item 1 1`] = `
<div
  className="sc-bwzfXH dYNPKz"
  innerRef={undefined}>
  <textarea
    className="sc-bdVaJa iYLCcn"
    innerRef={undefined}
    onChange={[Function]}
    value="" />
  <div
    className="sc-htpNat iUgnEl"
    innerRef={undefined}>
    <div
      className="sc-bxivhb fEzLwQ"
      innerRef={undefined}>
      1
    </div>
  </div>
</div>
`;

exports[`test renders correctly as item 2 1`] = `
<div
  className="sc-bwzfXH dYNPKz"
  innerRef={undefined}>
  <textarea
    className="sc-bdVaJa iYLCcn"
    innerRef={undefined}
    onChange={[Function]}
    value="" />
  <div
    className="sc-htpNat iUgnEl"
    innerRef={undefined}>
    <div
      className="sc-bxivhb fEzLwQ"
      innerRef={undefined}>
      2
    </div>
  </div>
</div>
`;

exports[`test renders grid item with auto hide 1`] = `
<div
  className="sc-bwzfXH gFkNNC"
  innerRef={undefined}>
  <textarea
    className="sc-bdVaJa iYLCcn"
    innerRef={undefined}
    onChange={[Function]}
    value="" />
  <div
    className="sc-htpNat iUgnEl"
    innerRef={undefined}>
    <div
      className="sc-bxivhb fEzLwQ"
      innerRef={undefined}>
      2
    </div>
  </div>
</div>
`;

exports[`test renders grid item without auto hide 1`] = `
<div
  className="sc-bwzfXH gFkNNC"
  innerRef={undefined}>
  <textarea
    className="sc-bdVaJa iYLCcn"
    innerRef={undefined}
    onChange={[Function]}
    value="" />
  <div
    className="sc-htpNat iUgnEl"
    innerRef={undefined}>
    <div
      className="sc-bxivhb fEzLwQ"
      innerRef={undefined}>
      2
    </div>
  </div>
</div>
`;
